# sleep-calendar-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  user-prefs.json
agent/: main.py  system_prompt.py  tools.py
evals/: conftest.py  fake_llm.py  judge.py  scenarios.py  test_agent_loop.py  test_dispatch.py  test_event_order.py  test_prompt.py  test_scenarios.py  test_sleep_guard.py
mock_calendar_api/: __init__.py  api.py  db.py  models.py  seed.py  tz.py
scripts/: smoke_test.py
tests/: test_batch.py  test_create.py  test_delete.py  test_get.py  test_list.py  test_seed.py  test_timezone.py  test_update.py
